--- a/FAQ.html
+++ b/FAQ.html
@@ -12,17 +12,25 @@
             padding: 20px;
             font-family: 'Montserrat', sans-serif;
             position: relative;
-            background-color: #ffffff; 
-            overflow: hidden;
+            background-color: #ffffff;
+            overflow-x: hidden;
+            min-height: 100vh;
         }
         .background {
-            position: fixed; 
+            position: fixed;
             top: 0;
             left: 0;
             right: 0;
             bottom: 0;
-            overflow: hidden;
             z-index: -1;
+        }
+        .container {
+            position: relative;
+            max-width: 800px;
+            margin: 0 auto;
+            padding-bottom: 20px;
+            min-height: 100vh;
+            overflow-y: auto;
         }
         .square {
             position: absolute;
@@ -39,15 +47,6 @@
             0% { transform: translateY(0); }
             50% { transform: translateY(-20px); }
             100% { transform: translateY(0); }
-        }
-        .container {
-            position: relative;
-            max-width: 800px;
-            margin: 0 auto;
-            z-index: 1;
-            padding-bottom: 20px;
-            max-height: calc(100vh - 40px); 
-            overflow-y: auto; 
         }
         h1 {
             text-align: center;
