--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
                 <img class="pfp" src="https://avatar-cyan.vercel.app/api/pfp/1075761108373221426/image" alt="Jake">
                 <div class="details">
                     <span class="title">Jake</span>
-                    <div class="role">Main Owner & Web Developer</div>
+                    <div class="role">Main Owner</div>
                     <div class="description">
                         <span>Main Owner & web developer, specializing in HTML, CSS, JS, LUA, and LUAU.</span>
                     </div>
@@ -134,7 +134,7 @@
                 <img class="pfp" src="https://avatar-cyan.vercel.app/api/pfp/1271943319739437056/image" alt="Celeste">
                 <div class="details">
                     <span class="title">Celeste</span>
-                    <div class="role">Main Owner & Server Administrator</div>
+                    <div class="role">Main Owner</div>
                     <div class="description">
                         <span>Main Owner & server administrator; developed the Android executor.</span>
                     </div>
@@ -148,7 +148,7 @@
                 <img class="pfp" src="https://avatar-cyan.vercel.app/api/pfp/1261072045123571773/image" alt="Kakey">
                 <div class="details">
                     <span class="title">Kakey</span>
-                    <div class="role">Lead Community Manager</div>
+                    <div class="role">Owner</div>
                     <div class="description">
                         <span>Lead community manager, responsible for server moderation and anti-nuke protocols.</span>
                     </div>
@@ -196,7 +196,7 @@
                 <img class="pfp" src="https://images-ext-1.discordapp.net/external/BKcukNWxeWAKTbwC41G8R20Xunn0nrmxVxX_QtdTqew/%3Fsize%3D4096/https/cdn.discordapp.com/avatars/968099366948704350/dbc219a20ea1f2a99254be78d5480def.png" alt="Kayzi">
                 <div class="details">
                     <span class="title">Kayzi</span>
-                    <div class="role">Lead Windows Developer</div>
+                    <div class="role">Developer</div>
                     <div class="description">
                         <span>Lead Windows platform developer.</span>
                     </div>
@@ -216,9 +216,9 @@
                 <img class="pfp" src="https://avatar-cyan.vercel.app/api/pfp/773952016036790272/image" alt="YellowGreg">
                 <div class="details">
                     <span class="title">YellowGreg</span>
-                    <div class="role">Lead Web Developer</div>
+                    <div class="role">Web Developer</div>
                     <div class="description">
-                        <span>Lead web developer, specializing in making the website & script searcher discord bot.</span>
+                        <span>Web developer, specializing in making the website & script searcher discord bot.</span>
                     </div>
                 </div>
             </div>
