--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
       }
 
       createFloatingSquares(15);
+      // if you thought there was a easter egg well theres no easter egg i lied lol
     </script>
   </body>
 </html>
