--- a/download.html
+++ b/download.html
@@ -205,7 +205,7 @@
 
     <div class="navbar">
         <a href="./index.html" class="home">Home</a>
-        <a href="./about.html" class="home">Developer</a>
+<!--         <a href="./about.html" class="home">Developer</a> -->
         <a href="https://discord.gg/fluxusz" target="_blank"> © FZ Team</a>
     </div>
 
