--- a/index.html
+++ b/index.html
@@ -220,6 +220,29 @@
                 height: 300px;
             }
         }
+
+        .snowflake {
+          position: absolute;
+          color: #ffffff;
+          font-size: 1rem;
+          opacity: 0.8;
+          animation: fall linear infinite;
+          pointer-events: none;
+      }
+
+      @keyframes fall {
+          0% {
+              transform: translateY(-10vh);
+              opacity: 0;
+          }
+          50% {
+              opacity: 1;
+          }
+          100% {
+              transform: translateY(110vh);
+              opacity: 0;
+          }
+      }
     </style>
 </head>
 <body>
@@ -264,28 +287,45 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
-        function createFloatingSquares(num) {
-            const background = document.querySelector(".background");
+      function Squares(num) {
+        const background = document.querySelector(".background");
 
-            for (let i = 0; i < num; i++) {
-                const square = document.createElement("div");
-                square.className = "floating-square";
+        for (let i = 0; i < num; i++) {
+            const square = document.createElement("div");
+            square.className = "floating-square";
+            square.classList.add(Math.random() > 0.5 ? "transparent" : "solid");
 
-                const isTransparent = Math.random() > 0.5;
-                square.classList.add(isTransparent ? "transparent" : "solid");
+            const size = Math.random() * 40 + 20;
+            square.style.width = `${size}px`;
+            square.style.height = `${size}px`;
+            square.style.top = `${Math.random() * 100}vh`;
+            square.style.left = `${Math.random() * 100}vw`;
+            square.style.animationDuration = `${Math.random() * 3 + 2}s`;
 
-                const size = Math.random() * 40 + 20;
-                square.style.width = `${size}px`;
-                square.style.height = `${size}px`;
-                square.style.top = `${Math.random() * 100}vh`;
-                square.style.left = `${Math.random() * 100}vw`;
-                square.style.animationDuration = `${Math.random() * 3 + 2}s`;
-
-                background.appendChild(square);
-            }
+            background.appendChild(square);
         }
+    }
 
-        createFloatingSquares(15);
+    function snowflakes(num) {
+        const background = document.querySelector(".background");
+
+        for (let i = 0; i < num; i++) {
+            const snowflake = document.createElement("div");
+            snowflake.className = "snowflake";
+            snowflake.innerHTML = "&#10052;"; 
+
+            const size = Math.random() * 25 + 15; 
+            snowflake.style.fontSize = `${size}px`;
+            snowflake.style.left = `${Math.random() * 100}vw`;
+            snowflake.style.animationDuration = `${Math.random() * 5 + 5}s`; 
+            snowflake.style.animationDelay = `${Math.random() * 5}s`;
+
+            background.appendChild(snowflake);
+        }
+    }
+
+    Squares(15);
+    snowflakes(30); 
     </script>
 </body>
 </html>
