--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FZ Team - Fluxus Z</title>
+    <title>FZ Team - FluxusWare</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
@@ -275,7 +275,7 @@
     <section class="hero">
         <div class="background"></div>
         <div class="hero-content">
-            <h1>Fluxus <span class="neo">Z</span></h1>
+            <h1>Fluxus <span class="neo">Ware</span></h1>
             <div class="next-gen">Next Gen exploit</div>
         </div>
         <div class="widget-container">
