--- a/FAQ.html
+++ b/FAQ.html
@@ -139,7 +139,7 @@
         </button>
         <div class="faq-item" onclick="toggleAnswer(this)">
             <div class="question">
-                <h2>My Fluxus Z Android crashes while opening the APK</h2>
+                <h2>My FluxusWare Android crashes while opening the APK</h2>
                 <i class="fas fa-chevron-right arrow"></i>
             </div>
             <div class="line"></div>
