--- a/FAQ.html
+++ b/FAQ.html
@@ -159,7 +159,7 @@
         </div>
         <div class="faq-item" onclick="toggleAnswer(this)">
             <div class="question">
-                <h2>When will Fluxus Z window release?</h2>
+                <h2>When will FluxusWare window release?</h2>
                 <i class="fas fa-chevron-right arrow"></i>
             </div>
             <div class="line"></div>
