--- a/FAQ.html
+++ b/FAQ.html
@@ -1,223 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
-    <style>
-        body {
-            margin: 0;
-            padding: 20px;
-            font-family: 'Montserrat', sans-serif;
-            position: relative;
-            background-color: #ffffff;
-            overflow-x: hidden;
-            min-height: 100vh;
-        }
-        .background {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            z-index: -1;
-        }
-        .container {
-            position: relative;
-            max-width: 800px;
-            margin: 0 auto;
-            padding-bottom: 20px;
-            min-height: 100vh;
-            overflow-y: auto;
-        }
-        .square {
-            position: absolute;
-            width: 50px;
-            height: 50px;
-            background-color: rgba(30, 144, 255, 0.5);
-            animation: float 3s ease-in-out infinite;
-            border-radius: 5px;
-        }
-        .square.glow {
-            box-shadow: 0 0 15px rgba(30, 144, 255, 1);
-        }
-        @keyframes float {
-            0% { transform: translateY(0); }
-            50% { transform: translateY(-20px); }
-            100% { transform: translateY(0); }
-        }
-        h1 {
-            text-align: center;
-            color: #1e90ff;
-            margin-bottom: 20px;
-        }
-        .faq-item {
-            padding: 15px;
-            margin-bottom: 20px;
-            cursor: pointer;
-            position: relative;
-            transition: color 0.3s;
-            border: 1px solid #1e90ff;
-            border-radius: 8px;
-            backdrop-filter: blur(10px);
-            background-color: rgba(255, 255, 255, 0.01);
-        }
-        .faq-item:hover {
-            color: #1e90ff;
-        }
-        .question {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .line {
-            border-bottom: 1px solid #1e90ff;
-            margin: 5px 0;
-        }
-        .answer {
-            max-height: 0;
-            overflow: hidden;
-            opacity: 0;
-            transition: max-height 0.5s ease-in-out, opacity 0.5s ease-in-out;
-            padding-top: 10px;
-        }
-        .answer.show {
-            max-height: 100px;
-            opacity: 1;
-        }
-        .arrow {
-            transition: transform 0.3s;
-        }
-        .arrow.rotate {
-            transform: rotate(90deg);
-        }
-        .toggle-button {
-            margin: 20px auto;
-            border: none;
-            background: none;
-            font-size: 24px;
-            cursor: pointer;
-            color: yellow;
-            transition: transform 0.3s;
-        }
-        .toggle-button:hover {
-            transform: scale(1.1);
-        }
-        .dark-mode {
-            background-color: #04070c;
-            color: #e0e0e0;
-        }
-        .dark-mode .faq-item {
-            color: #e0e0e0;
-            border-color: #007acc;
-        }
-        .dark-mode .line {
-            border-color: #007acc;
-        }
-        /* Responsive styles */
-        @media (max-height: 600px) {
-            .faq-item {
-                padding: 10px; 
-            }
-            h1 {
-                font-size: 1.5rem; 
-            }
-            .faq-item h2 {
-                font-size: 1.1rem;
-            }
-        }
-    </style>
-</head>
-<body>
-    <div class="background" id="background"></div>
-    <div class="container">
-        <h1>Frequently Asked Questions</h1>
-        <button class="toggle-button" onclick="darkmode()" id="themeToggleButton">
-            <i class="fas fa-sun" id="themeIcon"></i>
-        </button>
-        <div class="faq-item" onclick="toggleAnswer(this)">
-            <div class="question">
-                <h2>My FluxusWare Android crashes while opening the APK</h2>
-                <i class="fas fa-chevron-right arrow"></i>
-            </div>
-            <div class="line"></div>
-            <div class="answer">
-                Disable notifications from Roblox via your app settings.
-            </div>
-        </div>
-        <div class="faq-item" onclick="toggleAnswer(this)">
-            <div class="question">
-                <h2>My FrostWare Windows doesn't work</h2>
-                <i class="fas fa-chevron-right arrow"></i>
-            </div>
-            <div class="line"></div>
-            <div class="answer">
-                There's a tutorial video in our server; check it out/restart your executor, and it should work.
-            </div>
-        </div>
-        <div class="faq-item" onclick="toggleAnswer(this)">
-            <div class="question">
-                <h2>When will FluxusWare window release?</h2>
-                <i class="fas fa-chevron-right arrow"></i>
-            </div>
-            <div class="line"></div>
-            <div class="answer">
-                Work in progress, expect a release in possibly November.
-            </div>
-        </div>
-        <div class="faq-item" onclick="toggleAnswer(this)">
-            <div class="question">
-                <h2>Will the unc go up?</h2>
-                <i class="fas fa-chevron-right arrow"></i>
-            </div>
-            <div class="line"></div>
-            <div class="answer">
-                Sure, we will try our best.
-            </div>
-        </div>
-    </div>
-    <script>
-        function toggleAnswer(item) {
-            const answer = item.querySelector('.answer');
-            const arrow = item.querySelector('.arrow');
-            answer.classList.toggle('show');
-            arrow.classList.toggle('rotate');
-        }
-        function darkmode() {
-            document.body.classList.toggle('dark-mode');
-            const isDarkMode = document.body.classList.contains('dark-mode');
-            localStorage.setItem('darkMode', isDarkMode);
-            document.getElementById('themeIcon').classList.toggle('fa-sun', !isDarkMode);
-            document.getElementById('themeIcon').classList.toggle('fa-moon', isDarkMode);
-        }
-        function loadTheme() {
-            const isDarkMode = localStorage.getItem('darkMode') === 'true';
-            if (isDarkMode) {
-                document.body.classList.add('dark-mode');
-                document.getElementById('themeIcon').classList.add('fa-moon');
-            } else {
-                document.getElementById('themeIcon').classList.add('fa-sun');
-            }
-        }
-        function createSquares(num) {
-            const background = document.getElementById('background');
-            for (let i = 0; i < num; i++) {
-                const square = document.createElement('div');
-                square.className = 'square' + (Math.random() > 0.5 ? ' glow' : '');
-                const size = Math.random() * 50 + 20;
-                square.style.width = `${size}px`;
-                square.style.height = `${size}px`;
-                square.style.top = `${Math.random() * 100}vh`;
-                square.style.left = `${Math.random() * 100}vw`;
-                square.style.animationDuration = `${Math.random() * 3 + 2}s`;
-                background.appendChild(square);
-            }
-        }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Frostware - FAQ</title>
+    <link rel="icon" type="image/png" href="./logo.jpg" />
 
-        loadTheme();
-        createSquares(10);
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+    <link rel="stylesheet" href="./faq.css">
+  </head>
+  <body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <a class="navbar-brand" href="#">
+          <img src="./logo.jpg" alt="Frostware Logo" class="nav-logo"> Frostware
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./download.html">Download</a>
+            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="./developer.html">Developers</a>
+            </li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="https://discord.gg/3VUUpGRD6D" target="_blank">Discord</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+    <div class="background" id="background"></div>
+    
+    <div class="container">
+      <h1>Frequently Asked Questions</h1>
+      <button class="toggle-button" onclick="darkmode()" id="themeToggleButton">
+        <i class="fas fa-sun" id="themeIcon"></i>
+      </button>
+      <div class="faq-item" onclick="toggleAnswer(this)">
+        <div class="question">
+          <h2>My Frostware Android crashes while opening the APK</h2>
+          <i class="fas fa-chevron-right arrow"></i>
+        </div>
+        <div class="line"></div>
+        <div class="answer">
+          Disable notifications from Roblox via your app settings.
+        </div>
+      </div>
+      <div class="faq-item" onclick="toggleAnswer(this)">
+        <div class="question">
+          <h2>My FrostWare Windows doesn't work</h2>
+          <i class="fas fa-chevron-right arrow"></i>
+        </div>
+        <div class="line"></div>
+        <div class="answer">
+          There's a tutorial video in our server; check it out/restart your
+          executor, and it should work.
+        </div>
+      </div>
+      <div class="faq-item" onclick="toggleAnswer(this)">
+        <div class="question">
+          <h2>When will Frostware window release?</h2>
+          <i class="fas fa-chevron-right arrow"></i>
+        </div>
+        <div class="line"></div>
+        <div class="answer">
+          Work in progress, expect a release in possibly November.
+        </div>
+      </div>
+      <div class="faq-item" onclick="toggleAnswer(this)">
+        <div class="question">
+          <h2>Will the unc go up?</h2>
+          <i class="fas fa-chevron-right arrow"></i>
+        </div>
+        <div class="line"></div>
+        <div class="answer">Sure, we will try our best.</div>
+      </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        window.onscroll = function () {
+            var navbar = document.querySelector(".navbar");
+            if (window.scrollY > 50) {
+                navbar.classList.add("scrolled");
+            } else {
+                navbar.classList.remove("scrolled");
+            }
+        };
+
+      function toggleAnswer(item) {
+        const answer = item.querySelector(".answer");
+        const arrow = item.querySelector(".arrow");
+        answer.classList.toggle("show");
+        arrow.classList.toggle("rotate");
+      }
+      function darkmode() {
+        document.body.classList.toggle("dark-mode");
+        const isDarkMode = document.body.classList.contains("dark-mode");
+        localStorage.setItem("darkMode", isDarkMode);
+        document
+          .getElementById("themeIcon")
+          .classList.toggle("fa-sun", !isDarkMode);
+        document
+          .getElementById("themeIcon")
+          .classList.toggle("fa-moon", isDarkMode);
+      }
+      function loadTheme() {
+        const isDarkMode = localStorage.getItem("darkMode") === "true";
+        if (isDarkMode) {
+          document.body.classList.add("dark-mode");
+          document.getElementById("themeIcon").classList.add("fa-moon");
+        } else {
+          document.getElementById("themeIcon").classList.add("fa-sun");
+        }
+      }
+      function createSquares(num) {
+        const background = document.getElementById("background");
+        for (let i = 0; i < num; i++) {
+          const square = document.createElement("div");
+          square.className = "square" + (Math.random() > 0.5 ? " glow" : "");
+          const size = Math.random() * 50 + 20;
+          square.style.width = `${size}px`;
+          square.style.height = `${size}px`;
+          square.style.top = `${Math.random() * 100}vh`;
+          square.style.left = `${Math.random() * 100}vw`;
+          square.style.animationDuration = `${Math.random() * 3 + 2}s`;
+          background.appendChild(square);
+        }
+      }
+
+      loadTheme();
+      createSquares(10);
     </script>
-</body>
+  </body>
 </html>
