--- a/download.html
+++ b/download.html
@@ -1,9 +1,14 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FluxusWare - Download</title>
+    <title>Frostware - Download</title>
+    <link rel="icon" type="image/png" href="./logo.jpg" />
+
+    <meta property="og:title" content="Frostware - Download">
+    <meta property="og:description" content="Download Frostware.">
+    <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -205,34 +210,34 @@
 
     <div class="navbar">
         <a href="./index.html" class="home">Home</a>
-<!--         <a href="./about.html" class="home">Developer</a> -->
-        <a href="https://discord.gg/fluxusz" target="_blank"> © FZ Team</a>
+        <!-- <a href="./developer.html" class="home">Developer</a> -->
+        <a href="https://discord.gg/3VUUpGRD6D" target="_blank"> © FZ Team</a>
     </div>
 
     <div class="background" id="background"></div>
     <div class="container">
-        <h1>FluxusWare Download</h1>
+        <h1>Frostware Download</h1>
         <button class="toggle-button" onclick="toggleDarkMode()" id="themeToggleButton">&#9728;</button>
 
         <div class="platform" onclick="toggleDropdown('android')">
             <h2><i class="fab fa-android"></i> Android <span class="arrow" id="androidArrow">&#9654;</span></h2>
             <div class="download-options" id="androidOptions">
-                <a href="#" class="download-link">FluxusWare (W.I.P)</a>
+                <a href="#" class="download-link">Frostware (W.I.P)</a>
             </div>
         </div>
 
         <div class="platform" onclick="toggleDropdown('ios')">
             <h2><i class="fab fa-apple"></i> iOS <span class="arrow" id="iosArrow">&#9654;</span></h2>
             <div class="download-options" id="iosOptions">
-                <a href="#" class="download-link">FluxusWare (W.I.P)</a>
+                <a href="#" class="download-link">Frostware (W.I.P)</a>
             </div>
         </div>
 
         <div class="platform" onclick="toggleDropdown('windows')">
             <h2><i class="fab fa-windows"></i> Windows <span class="arrow" id="windowsArrow">&#9654;</span></h2>
             <div class="download-options" id="windowsOptions">
-                <a href="#" class="download-link">FluxusWare (W.I.P)</a>
-                <a href="FrostWareInstaller.zip" class="download-link">FrostWare</a>
+                <a href="#" class="download-link">Frostware (W.I.P)</a>
+                <a href="https://gofile.io/d/YHKJYI" class="download-link">FrostWare</a>
             </div>
         </div>
     </div>
@@ -263,7 +268,7 @@
             }
         }
 
-        function Square(num) {
+        function createSquares(num) {
             const background = document.getElementById('background');
             for (let i = 0; i < num; i++) {
                 const square = document.createElement('div');
@@ -279,7 +284,7 @@
         }
 
         loadTheme();
-        Square(15);
+        createSquares(15);
     </script>
 </body>
 </html>
