--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Frostware - Official">
     <meta property="og:description" content="Normal executor to execute script.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://frostware.vercel.app/">
     <meta property="og:image" content="./logo.jpg">
     <meta property="og:image:width" content="1920">
     <meta property="og:image:height" content="1080">
