--- a/download.html
+++ b/download.html
@@ -211,7 +211,7 @@
     <div class="navbar">
         <a href="./index.html" class="home">Home</a>
         <!-- <a href="./developer.html" class="home">Developer</a> -->
-        <a href="https://discord.gg/3VUUpGRD6D" target="_blank"> © FZ Team</a>
+        <a href="https://discord.gg/3VUUpGRD6D" target="_blank">Discord</a>
     </div>
 
     <div class="background" id="background"></div>
