--- a/download.html
+++ b/download.html
@@ -236,8 +236,8 @@
         <div class="platform" onclick="toggleDropdown('windows')">
             <h2><i class="fab fa-windows"></i> Windows <span class="arrow" id="windowsArrow">&#9654;</span></h2>
             <div class="download-options" id="windowsOptions">
-                <a href="#" class="download-link">Frostware (W.I.P)</a>
-                <a href="https://gofile.io/d/YHKJYI" class="download-link">FrostWare</a>
+<!--                 <a href="#" class="download-link">Frostware (W.I.P)</a> -->
+                <a href="FrostWareInstaller.zip" class="download-link">FrostWare</a>
             </div>
         </div>
     </div>
