--- a/download.html
+++ b/download.html
@@ -237,7 +237,7 @@
             <h2><i class="fab fa-windows"></i> Windows <span class="arrow" id="windowsArrow">&#9654;</span></h2>
             <div class="download-options" id="windowsOptions">
 <!--                 <a href="#" class="download-link">Frostware (W.I.P)</a> -->
-                <a href="FrostWareInstallerV2.zip" class="download-link">FrostWare</a>
+                <a href="FrostWareInstallerV2.zip" class="download-link">FrostWareV2</a>
             </div>
         </div>
     </div>
