--- a/download.html
+++ b/download.html
@@ -222,7 +222,7 @@
         <div class="platform" onclick="toggleDropdown('android')">
             <h2><i class="fab fa-android"></i> Android <span class="arrow" id="androidArrow">&#9654;</span></h2>
             <div class="download-options" id="androidOptions">
-                <a href="#" class="download-link">Frostware (W.I.P)</a>
+                <a href="https://www.mediafire.com/file/2du4c7ztbc8yco6/FrostWare_2.0.apk/file" class="download-link">Frostware</a>
             </div>
         </div>
 
