--- a/download.html
+++ b/download.html
@@ -226,13 +226,13 @@
             </div>
         </div>
 
-        <div class="platform" onclick="toggleDropdown('ios')">
+<!--         <div class="platform" onclick="toggleDropdown('ios')">
             <h2><i class="fab fa-apple"></i> iOS <span class="arrow" id="iosArrow">&#9654;</span></h2>
             <div class="download-options" id="iosOptions">
                 <a href="#" class="download-link">Frostware (W.I.P)</a>
             </div>
         </div>
-
+ -->
         <div class="platform" onclick="toggleDropdown('windows')">
             <h2><i class="fab fa-windows"></i> Windows <span class="arrow" id="windowsArrow">&#9654;</span></h2>
             <div class="download-options" id="windowsOptions">
